FullSb1-27-apr-15/src/objects/Runtime_Errors__c.object
<CustomObject>
    <description>To Capture Runtime errors.</description>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_info__c</fullName>
        <label>Error info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Runtime Errors</label>
    <nameField>
        <displayFormat>Err-{0}</displayFormat>
        <label>Runtime Errors  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Runtime Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>